Kubernetes/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moad-ingress
  namespace: garrag-bahand
spec:
  ingressClassName: nginx
  rules:
  - host: "calculatrice-garrag-bahand.poyltech-dijon.kiowy.net"   
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moadservice-front
            port: 
              number: 8080
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: moadservice-api
            port:
              number: 5000
